Implement a new option...items after mailing aren't refundable (default = off)

--- a/src/mangosd/mangosd.conf.dist.in
+++ b/src/mangosd/mangosd.conf.dist.in
@@ -1712,3 +1712,13 @@ PvPToken.MapRestriction = 4
 ###################################################################################################################
 
 Custom.AllowFlyingMountsEverywhere = 0
+
+###################################################################################################################
+#
+#     Custom.MailItemRefundable
+#         Set it to 0 to make items not-refundable anymore after mailing
+#     Default : 1
+#
+###################################################################################################################
+
+Custom.MailItemRefundable = 1
